Fusion product-card´s con index dinamicamente

--- a/proyecto/MarketPlace/style/style.css
+++ b/proyecto/MarketPlace/style/style.css
@@ -22,6 +22,7 @@ body {
     grid-template-columns: repeat(auto-fill, 240px);
     gap: 26px;
     place-content: center;
+    margin-top: 20px;
 }
 .desktop-menu {
     position: absolute;
@@ -139,11 +140,13 @@ body {
 }
 .menu {
     display: none;
+    cursor: pointer;
 }
 .mobile-menu {
     padding: 24px;
     position: absolute;
-    top: 60px;
+    top: 61px;
+    background-color: var(--white);
 }
 .mobile-menu a{
     text-decoration: none;
@@ -222,6 +225,7 @@ nav {
 }
 .navbar-shopping-cart {
     position: relative;
+    cursor: pointer;
 }
 .navbar-rigth ul li:nth-child(3) {
     width: 14px;
@@ -360,8 +364,9 @@ nav {
     position: absolute;
     width: 360px;
     right: 0;
-    padding: 24px;
+    padding: 0 24px;
     box-sizing: border-box;
+    background-color: var(--white);
 }
 .product-info {
     display: flex;
